# primordia-nebulous-blank

./: .autoenv  .gitignore  CMakeLists.txt  README.md  defaults.env  docker-compose.yaml  flake.nix
.devcontainer/: devcontainer.json
app/: README.md
dockerfiles/: Dockerfile.app
src/: CMakeLists.txt  star.cpp
